--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "npm",
+  "name": "@sdev09/getrandom",
   "version": "1.0.0",
-  "description": "",
+  "description": " generate any random number or string by giving length ",
   "main": "index.js",
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sDEV-eloper/getRandom.git"
+  },
+  
+  "keywords": ["random", "get_random", "generate-random"],
+  "author": "suraj dev",
   "license": "ISC"
 }
